# templatey

./: .gitignore  README.clc  conftest.py  pyproject.toml
.github/workflows/: on_pr-run_cicd.yaml  on_release-publish_pypi.yaml  on_trigger-publish_pypi_test.yaml
benchmarks/: templatey_benchmark_2025-03-04-1741114966.json  templatey_benchmark_2025-03-13-1741883446.json  templatey_benchmark_2025-05-26-1748269777.json  templatey_benchmark_2025-05-27-1748365936.json  templatey_benchmark_2025-06-26-1750935236.json  templatey_benchmark_2025-06-27-1751020815.json  templatey_benchmark_2025-06-27-1751046206.json  templatey_benchmark_2025-06-30-1751298164.json  templatey_benchmark_2025-07-01-1751372012.json  templatey_benchmark_2025-07-03-1751544910.json  templatey_benchmark_2025-07-14-1752493476.json  templatey_benchmark_2025-07-14-1752533158.json
sidecars_py/templatey_testutils/: pyproject.toml
sidecars_py/templatey_testutils/src_py/templatey_testutils/: __init__.py  profile_entrypoint.py
src_py/templatey/: __init__.py  _annotations.py  _bootstrapping.py  _forwardrefs.py  _provenance.py  _signature.py  _slot_tree.py  _types.py  environments.py  exceptions.py  parser.py  renderer.py  templates.py  utils.py
src_py/templatey/prebaked/: loaders.py  (+1 more)
tests_py/: _utils.py  test__benchmarks.py  test_e2e.py  test_environments.py  test_interpolators.py  test_parser.py  test_renderer.py  test_slot_tree.py  test_templates.py
tests_py/prebaked/: _test_loader_template.html  _test_loader_template_unicode.html  test_env_funcs.py  test_loaders.py  test_template_configs.py
